--- a/MailTerm.Console/MailTerm.Console.csproj
+++ b/MailTerm.Console/MailTerm.Console.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0"/>
         <PackageReference Include="MimeKit" Version="4.4.0"/>
+        <PackageReference Include="Spectre.Console" Version="0.48.0"/>
     </ItemGroup>
 
 </Project>
